Fix scroll spacings

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -165,3 +165,7 @@ code {
   max-height: 800px;
   min-height: 500px;
 }
+
+.min-h-screen-90 {
+  min-height: 90vh;
+}
